--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,36 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to top, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%);
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+ 
+.col-md-5{
+ margin-top: 200px !important;
+}
+
+
+
+input{
+  width: 99% !important;
+  background-color:rgb(185, 186, 189)!important;
+}
+
+button{
+  width: 100% !important;
+  background-color:rgb(108, 127, 179) !important;
+  border-radius: 10px !important;
+  border-color: whitesmoke !important;
+  color: rgb(0, 2, 94) !important;
+  font-weight: bold !important;
+  
+}
+
+h1{
+  font-weight: bold !important;
 }
